wip: account verification and password reset
