# src/routes/api.js
@@ -1,5 +1,6 @@
 import express from 'express';
 import { register, login } from '../controllers/auth-controller.js';
+import { sendPasswordRecoveryMail } from '../controllers/password-recovery-controller.js';
 import { getAllCountries } from '../controllers/countries-controller.js';
 import { authMiddleware } from '../middlewares/index.js';
 
@@ -8,5 +9,6 @@ const router = express.Router();
 router.get('/countries', authMiddleware, getAllCountries);
 router.post('/register', register);
 router.post('/login', login);
+router.post('/password/send-recovery-link', sendPasswordRecoveryMail);
 
 export default router;
